@@ -55,6 +55,16 @@ WebAuth 4.5.4 (unreleased)
     Fix the WebLogin replay detection logic to not attempt to trigger
     during password changes, which do not have request tokens.
 
+    Work around problems with WebLogin parsing of the XML returned from
+    the WebKDC when a user attempts an authentication using a non-ASCII
+    principal name.  This results in invalid XML that XML::Parser cannot
+    parse.  The proper fix is to catch this on the WebKDC side, but, as an
+    interim measure, replace non-ASCII characters in the WebKDC reply with
+    periods so that reply processing can continue.
+
+    Improve error reporting of unparsable XML received by the WebLogin
+    server from the WebKDC.
+
     Fix logging of mod_webkdc <requestTokenRequest> failures.
 
     Fix the webauth/webkdc.h header prototype for webauth_user_validate to
